# stock-terminal

./: LICENSE  README.md  main.py  pyproject.toml
config/: __init__.py  config.py  logging.py  paths.py
connectors/: __init__.py  base.py  claude.py  deepseek.py  gemini.py  preflight.py  registry.py
data/: __init__.py  base.py  mock.py  rate_limiter.py  registry.py  twelvedata.py  yahoo.py
data/adapters/: __init__.py  base.py  mock.py  registry.py  twelvedata.py  yahoo.py
db/: __init__.py  config.py  symbols.py
infra/: __init__.py  config.py  file_manager.py  logging.py  paths.py
knowledge/: __init__.py
migrations/: 0001.initial.rollback.sql  0001.initial.sql  0003.user_agent_recommendations.rollback.sql  0003.user_agent_recommendations.sql  0004.user_agent_name_unique.sql
models/: app_config.py  candle.py  fundamentals.py  ohlcv_series.py  stock_meta.py  tagged_symbol.py  timeframe.py  user_agent.py  user_agent_recommendation.py
persistence/: __init__.py
persistence/migrations/: 0002.user_agents.rollback.sql  0002.user_agents.sql  0003.user_agent_recommendations.sql
persistence/repositories/: __init__.py  config_repository.py  (+3 more)
repositories/: __init__.py  user_agent_recommendation_repository.py  user_agent_repository.py
security/: keystore.py
services/: agent_service.py  knowledge.py  prompt_template.py  recommendation_evaluation_service.py  signal_service.py  symbol_service.py
tests/: test_knowledge.py  test_symbol_manager_escape.py
ui/: dashboard.py
validators/: __init__.py  base.py  default.py  validators.py  yahoo.py
(+81 files in other folders)
