[project]
name = "stock-terminal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.109.2",
    "google-genai>=2.7.0",
    "httpx>=0.28.1",
    "keyring>=25.7.0",
    "openai>=2.40.0",
    "pydantic>=2.13.4",
    "rich>=15.0.0",
    "textual>=8.2.7",
    "yfinance>=1.4.0",
    "yoyo-migrations>=9.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
